# cuda_project

./: .gitignore  CMakeLists.txt  README.md  compile.sh  env_setup.py
python/: __init__.py  elemwise.py  utils.py
src/: 0_elemwise.cu  cuda_kernel.cu  cuda_kernel.h  cuda_limit.h  cuda_macro.h  include.h
test/: test_elemwise.py
